--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -20,7 +20,8 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	
+	<key>AppGroupId</key>
+    <string>$(CUSTOM_GROUP_ID)</string>
     <key>CFBundleURLTypes</key>
     	<array>
     		<dict>
